tests/miniJava/pos/000801_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new int [ 0 ] ) System.out.println ( { } ) ; else java = 0 ; } }
