tests/miniJava/neg/002904_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = static new int [ 0 ] ; } }
